--- a/.github/workflows/keep.yml
+++ b/.github/workflows/keep.yml
@@ -3,8 +3,8 @@ name: 批量访问保活进程
 on:
   schedule:
     # 使用cron表达式定义任务运行的时间
-    #github最小时间间隔为10分钟
-    - cron: '*/10 * * * *'
+    # 每8小时触发一次
+    - cron: '0 */8 * * *'
   workflow_dispatch:
 
 jobs:
